# aws-lambda-python-venv

./: README.md  pyproject.toml
lambda_venv/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py  layer_dir.py  layer_venv.py
